# KN-41

./: README.md  REEDME.md
3aJIik/: 3aJIikoBka(1).ipynb  3aJIikoBka.ipynb
exam/: README.md  main.py  test.py  test_main.py
init/: README.md
lab1/: README.md  README.mde  my_first_app.ipynb
lab2/: README.md  code.py
lab3/: README.md
lab4/: BigCode.ipynb  README.md  code1.ipynb  code2.ipynb  code3.ipynb  code4.ipynb  table.csv  АНАЛОГОВ НЄТ.npz
Автоматизація процесу тестування/: README.md  main.py  test_main.py
Візуалізація результатів дослідження/: README.md
Написання_тестів_на_Python/: README.md
Написання_тестів_на_Python/Work/: README.md  app.py  pyproject.toml
Робота у віртуальних серидовищах/: README.md  main.py
Робота у віртуальних серидовищах/python_virtualenvs_project/: README.md
Робота у віртуальних серидовищах/tests/: test_example.py
Розв'язання задач лінійного програмування/: README.md
